# AOCKMLab1

./: .gitignore  CMakeLists.txt  charTest.cpp  charTest.h  doubleTests.cpp  doubleTests.h  floatTests.cpp  floatTests.h  intTests.cpp  intTests.h  longTests.cpp  longTests.h  main.cpp  myMath.cpp  myMath.h  outputWriter.cpp  outputWriter.h
