cmake_minimum_required(VERSION 3.20)
project(AOCKMLAB1)

set(CMAKE_CXX_STANDARD 20)

add_executable(AOCKMLAB1 main.cpp intTests.cpp intTests.h myMath.cpp myMath.h outputWriter.cpp outputWriter.h floatTests.cpp floatTests.h doubleTests.cpp doubleTests.h longTests.cpp longTests.h charTest.cpp charTest.h)
